# autocontent

./: .env.example  .gitignore  ADS_CYCLE_LOG.md  ADS_GOAL.md  AUTONOMOUS_GOAL.md  CYCLE_LOG.md  DESIGN_X402_GOAL.md  DESIGN_X402_LOG.md  OPERATOR_CYCLE_LOG.md  OPERATOR_GOAL.md  README.md  modal_app.py  pyproject.toml
.github/workflows/: ci.yml  db-migrate.yml
backend/: auth.py  errors.py  idempotency_api.py  main.py  openapi.py  pagination.py  rate_limit.py
backend/routes/: ad_structure.py  admin.py  ads.py  agent.py  articles.py  billing.py  brand_kit.py  calendar.py  campaigns.py  competitors.py  connect.py  experiments.py  failures.py  gsc.py  healthz.py  image_posts.py  intelligence.py  jobs.py  keywords.py  kits.py  library.py  media.py  metrics.py  newsletters.py  niches.py  ops.py  performance.py  press.py  providers.py  spend.py  studio.py  style_presets.py  templates.py  tokens.py  uploads.py  users.py  voices.py  webhook_endpoints.py  webhooks.py  x402.py
db/: README.md
db/migrations/: 0001_init.rollback.sql  0001_init.sql  0002_niche_overrides.rollback.sql  0002_niche_overrides.sql  0003_personal_access_tokens.rollback.sql  0003_personal_access_tokens.sql  0004_job_status_skipped.rollback.sql  0004_job_status_skipped.sql  0005_user_global_cap.rollback.sql  0005_user_global_cap.sql  0006_post_metrics.rollback.sql  0006_post_metrics.sql  0007_approval_mode.rollback.sql  0007_approval_mode.sql  0008_credits_billing.rollback.sql  0008_credits_billing.sql  0009_lookup_indexes.rollback.sql  0009_lookup_indexes.sql  0010_articles.rollback.sql  0010_articles.sql  0011_admin_rbac_audit.rollback.sql  0011_admin_rbac_audit.sql  0012_outbound_webhooks.rollback.sql  0012_outbound_webhooks.sql  0013_brand_kit.rollback.sql  0013_brand_kit.sql  0014_email_notifications_pref.rollback.sql  0014_email_notifications_pref.sql  0015_ads.rollback.sql  0015_ads.sql  0016_x402_payments.rollback.sql  0016_x402_payments.sql  0017_niche_character.rollback.sql  0017_niche_character.sql  0017_press_planner.rollback.sql  0017_press_planner.sql  (+32 more)
e2e/: README.md  smoke.mjs
examples/: mcp_agent.md  python_quickstart.py
scripts/: export_openapi.py  migrate.py
tests/: conftest.py  test_ad_actions_exec.py  test_ad_experiments_pg.py  test_ad_experiments_route.py  test_ad_experiments_service.py  test_ad_spend_guard.py  test_ad_workflows.py  test_admin_route.py  test_ads_composio_client.py  test_ads_route.py  test_agent_metering.py  test_alert_scan.py  test_analytics_sync.py  test_api_foundation.py  test_api_parity.py  test_approval_mode.py  test_archival_hardening.py  test_article_pipeline.py  test_article_research.py  test_article_resilience.py  test_article_social.py  test_articles_route.py  test_audio_mux.py  test_audit_round2_fixes.py  test_auth_pat.py  test_ayrshare_analytics.py  test_ayrshare_profiles.py  test_billing.py  test_brand_kit_route.py  test_calendar_route.py  test_campaign_runner.py  test_character_sheet.py  test_cli.py  test_competitor_watch.py  test_competitors_repo_pg.py  test_competitors_route.py  test_compose.py  test_composio_client.py  test_concurrency.py  test_connect_route.py  (+104 more)
web/: .env.local.example  .gitignore  README.md  components.json  middleware.ts  package-lock.json  package.json
(+633 files in other folders)
