[project]
name = "autocontent"
version = "0.1.0"
description = "Autonomous short-form content creation system"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64",
    "openai>=1.50",
    "openai-agents>=0.0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "ffmpeg-python>=0.2",
    "tenacity>=8.3",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyjwt[crypto]>=2.9",
    "mcp[cli]>=1.2",
]

[project.scripts]
autocontent = "autocontent.cli:main"
autocontent-mcp = "autocontent.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
