[project]
name = "marketer-sh"
version = "0.1.0"
description = "Autonomous short-form content creation system"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64",
    "openai>=1.50",
    "openai-agents>=0.0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "ffmpeg-python>=0.2",
    "tenacity>=8.3",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyjwt[crypto]>=2.9",
    "mcp[cli]>=1.2",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
    "boto3>=1.34",
    "stripe>=10.0",
    "yoyo-migrations>=8.2",
    "psycopg2-binary>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
]

[project.scripts]
marketer = "marketer.cli:main"
marketer-mcp = "marketer.mcp_server:main"
marketer-migrate = "scripts.migrate:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["marketer*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
